@@ -150,7 +150,16 @@ let ld_conf_contents () =
     let ic = open_in (Filename.concat Config.standard_library "ld.conf") in
     begin try
       while true do
-        path := input_line ic :: !path
+        let entry = input_line ic in
+        let entry =
+          if entry = Filename.current_dir_name
+          || entry = Filename.parent_dir_name
+          || Filename.is_relative entry && not (Filename.is_implicit entry) then
+            Filename.concat Config.standard_library entry
+          else
+            entry
+        in
+        path := entry :: !path
       done
     with End_of_file -> ()
     end;
